--- a/package.json
+++ b/package.json
@@ -72,8 +72,9 @@
   "dependencies": {
     "@eslint/js": "9.23.0",
     "@fortawesome/fontawesome-svg-core": "6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
-    "@fortawesome/react-fontawesome": "0.2.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "2.6.1",
     "axios": "1.8.4",
     "bootstrap": "5.3.3",
